--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -52,7 +52,7 @@ if config["use_scallop"]:
 
             rule all:
                 input:
-                    directory("results/scallop_annotation/")
+                    directory("results/scallop_annotation/"),
                     "results/stringtie_annotation/stringtie.gtf"
     else:
         rule all:
