--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -52,12 +52,12 @@ if config["use_scallop"]:
 
             rule all:
                 input:
-                    directory("results/scallop_annotation/"),
+                    "results/scallop_annotation/success.txt",
                     "results/stringtie_annotation/stringtie.gtf"
     else:
         rule all:
             input:
-                directory("results/scallop_annotation/")
+                "results/scallop_annotation/success.txt"
 else:
     rule all:
         input:
