--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -53,7 +53,7 @@ if config["use_scallop"]:
             rule all:
                 input:
                     "results/ignorethisdirectory/success.txt",
-                    "results/stringtie_annotation/stringtie.gtf"
+                    "results/ignorethisdirectory_stringtie/success.txt"
     else:
         rule all:
             input:
@@ -61,4 +61,4 @@ if config["use_scallop"]:
 else:
     rule all:
         input:
-            "results/stringtie_annotation/stringtie.gtf"
+            "results/ignorethisdirectory_stringtie/success.txt"
