--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -30,10 +30,10 @@ container: "docker://continuumio/miniconda3"
 ##### load rules #####
 include: "rules/common.smk"
 
-if config["use_scallop"]:
+if config["scallop"]["use_scallop"]:
     include: "rules/scallop.smk"
 
-if config["use_stringtie"]:
+if config["stringtie"]["use_stringtie"]:
     include: "rules/stringtie.smk"
 
 if config["use_mikado"]:
@@ -41,25 +41,29 @@ if config["use_mikado"]:
 
 ##### target rules #####
 
-if config["use_scallop"]:
-    if config["use_stringtie"]:
-        if config["use_mikado"]:
+if config["use_mikado"]:
+    # Mikado output
+    rule all:
+        input:
+            "results/annotation/combined.gtf"
 
-            rule all:
-                input:
-                    "results/annotation/combined.gtf"
-        else:
+if config["scallop"]["use_scallop"]:
+    if config["stringtie"]["use_stringtie"]:
 
-            rule all:
-                input:
-                    "results/ignorethisdirectory/success.txt",
-                    "results/stringtie_merge/stringtie_merged.gtf",
-                    "results/ignorethisdirectory_stringtie/success.txt"
+        rule all:
+            input:
+                "results/ignorethisdirectory/success.txt",
+                "results/stringtie_merge/stringtie_merged.gtf",
+                "results/ignorethisdirectory_stringtie/success.txt"
+
     else:
+
         rule all:
             input:
                 "results/ignorethisdirectory/success.txt"
+
 else:
+
     rule all:
         input:
             "results/stringtie_merge/stringtie_merged.gtf",
