--- a/config/config.yaml
+++ b/config/config.yaml
@@ -129,6 +129,7 @@ portcullis_junc_params: ""
 transdecoder_params: ""
 
 ## Optional blastx parameters
+makeblastdb_params: ""
 blastx_params: "-max_target_seqs 5"
 
 ## Optional mikado pipeline parameters
