--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -38,7 +38,7 @@ if config["stringtie"]["use_stringtie"]:
     include: "rules/clean_assemblies.smk"
 
 if config["clean_reference"]:
-    include: "clean_ref.smk"
+    include: "rules/clean_ref.smk"
 
 if config["use_mikado"]:
     include: "rules/mikado.smk"
