--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,14 +10,6 @@ samples:
   WT_ctl_3: ../THE_Aligner/twopass_hogg_star/align/WT_ctl_3.bam
 
 
-# Path to table that maps sample IDs to group IDs.
-# Should have two columns, one named 'sample' and the
-# other named 'group_id'. group_id should be a number
-# from 1 to the number of sample "groups" you have. A 
-# sample group is a set of samples that you suspect will
-# have similar transcriptomes
-group_id_table: data/group_ids.csv
-
 # Annotation GTF to compare assemblies to or guide assembly
 reference_gtf: data/annotation/CHESS.gtf
 
@@ -25,6 +17,7 @@ reference_gtf: data/annotation/CHESS.gtf
 clean_only: False
 
 # Flattened reference (only relevant if cleaning reference)
+  # File is created by pipeline if it does not already exist.
 flat_ref: data/annotation/CHESS_flat.gtf
 
 # Strandedness of library
@@ -32,7 +25,7 @@ flat_ref: data/annotation/CHESS_flat.gtf
   # reverse means that read 2 represents 5' to 3' sequence of original RNA (read 1 thus represents its reverse complement)
   # yes means that read 1 represents 5' to 3' sequence of original RNA
   # no means unstranded
-  # Used by FeatureCounts, though naming convention is from HTSeq (see https://htseq.readthedocs.io/en/master/htseqcount.html for details)
+  # Used by FeatureCounts, though naming convention is from HTSeq
 strandedness: "reverse"
 
 # Paired-end data?
@@ -50,7 +43,7 @@ stringtie:
 
 
 # Parameters to pass to Stringtie 
-stringtie_params: "--rf -f 0.05 -j 10 -c 10 -s 10 -g 1"
+stringtie_params: "-f 0.05 -j 10 -c 10 -s 10 -g 1"
 
 # Parameters to pass to Stringtie --merge
 stringtie_merge_params: ""
@@ -102,7 +95,17 @@ splitting_bins_params: ""
 
 ##### FeatureCounts parameters #####
 
+# To be passed to all calls to featureCounts
 feature_counts_params: ""
+
+# To be passed to featureCounts --nonOverlap parameter
+  # Sets number of bases in reads that can not overlap
+  # with exonic regions of gene for read to get called intronic.
+  # Soft-clipping is unfortunately considered non-overlapping
+  # by featureCounts, so sometimes worth increasing this a 
+  # bit from "0" to avoid calling a significant fraction of
+  # truly exonic reads intronic.
+feature_counts_exon_nonverlap: "0"
 
 
 ##### ANNOTATION FILTERING RSCRIPT PARAMETERS
