Include necessary rule for new steps

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -32,6 +32,7 @@ include: "rules/common.smk"
 include: "rules/stringtie.smk"
 include: "rules/clean_assemblies.smk"
 include: "rules/clean_ref.smk"
+include: "rules/score.smk"
 
 ##### target rules #####
 
